# Options

./: .gitignore  README.md  create_sample_data.py  demo.py  options_data_exploracao.ipynb  pyproject.toml  test_volatility_smile.py  volatility_smile.py
options_hedge/: __init__.py  analytics.py  models.py  payoff.py  portfolio.py  pricing.py  scenarios.py  simulation.py  smile.py  theta.py  vol_shock.py
options_hedge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_demo.py  test_payoff.py  test_portfolio.py  test_pricing.py  test_scenarios.py  test_simulation.py  test_smile.py
